@@ -139,6 +139,7 @@ v2.1.0 - 2018-05-03
 * Support Arabic language
 * Split app css in two files for better support of ltr/rtl text direction
 * Add helper function htmldir()
+* Fix login remember with 2fa and u2f enabled
 
 v2.0.1 - 2018-04-17
 -------------------
